[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "premia"
version = "2025.11.1"
description = "Derivatives pricing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["py_vollib"]

[tool.pytest.ini_options]
addopts = "-q --cov=premia --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"


